src/objects/ffr__DataViewField__c.object
<CustomObject>
    <description>Stores details of a field that has been added to a dataview.</description>
    <fields>
        <fullName>ffr__Aggregatable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Aggregatable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffr__AggregationMode__c</fullName>
        <label>Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>COUNT</fullName>
                </value>
                <value>
                    <fullName>SUM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffr__CommonName__c</fullName>
        <label>Common Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Account Number</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Period</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffr__ConvertCurrency__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Convert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffr__DataViewJoin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DataView Join</label>
        <referenceTo>ffr__DataViewJoin__c</referenceTo>
        <relationshipLabel>DataView Fields</relationshipLabel>
        <relationshipName>DataViewFields</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffr__DataView__c</fullName>
        <label>DataView</label>
        <referenceTo>ffr__DataView__c</referenceTo>
        <relationshipLabel>DataView Fields</relationshipLabel>
        <relationshipName>DataViewFields</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ffr__KeyPriority__c</fullName>
        <label>Key</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffr__ObjectField__c</fullName>
        <label>Object Field</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffr__Presentable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Presentable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffr__Reversible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reversible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffr__Selectable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Selectable</label>
        <type>Checkbox</type>
    </fields>
    <label>Dataview Field</label>
    <nameField>
        <label>Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dataview Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>